# oh-doc-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  main.py  pyproject.toml
src/utils/fonts/Nohemi/: README.md
src/youtube_extract/: __init__.py  __main__.py  app.py  cli.py  client_pipeline.py  cookies.py  export_claude_prompts_cli.py  extract.py  ministracao.py  ministracao_cli.py  pdf_export.py  progress.py  segmentacao.py  summarize.py  summarize_cli.py  video_id.py  youtube_metadata.py
src/youtube_extract/brand/: __init__.py  open_heavens.py
src/youtube_extract/templates/: como_usar.md.j2  guia_open_groups.html.j2
src/youtube_extract/templates/prompts/: ministracao.md.j2  segmentacao.md.j2
tests/: test_render.py  test_resumo_parser.py  test_segmentacao.py  test_smoke.py
